fix bug: overflowing grid

--- a/frontend/src/styles/OneSpot.scss
+++ b/frontend/src/styles/OneSpot.scss
@@ -23,7 +23,7 @@
 .one-spot__header {
   display: flex;
   justify-content: space-between;
-  width: 94%; //could use refactor, not sure why it's spilling over
+  //width: 94%; //could use refactor, not sure why it's spilling over
   height: 370px;
   margin: 1.5em;
   gap: 1.5em;
@@ -58,10 +58,12 @@
 }
 
 .one-spot__visits {
-  width: 91.8%; //could use refactor, not sure why it's spilling over
+
+  //width: 91.8%; //could use refactor, not sure why it's spilling over
   display: grid;
-  grid-template-columns: repeat(3, 33.33%);
-  grid-column-gap: 1em;
-  grid-row-gap: 1em;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1.5em;
   margin: 1.5em;
+
+  
 }
